# HP-C

./: .gitmodules  CMakeLists.txt  README.md
clib/sys/: io.h
example/basic-c/: main.c  main.ll
forge/: main.cpp
forge/include/: Context.h  TemplateManager.h
forge/include/llvm/: LLVM.h
forge/include/translator/: BasicBlock.h  Constant.h  Function.h  Module.h  Type.h  Variable.h
forge/include/translator/instruction/: Alloca.h  BinOp.h  Br.h  Call.h  GetElementPtr.h  ICmp.h  ResultAnalyze.h  Ret.h
forge/src/: TemplateManager.cpp
forge/src/llvm/: LLVM.cpp
forge/src/translator/: BasicBlock.cpp  Constant.cpp  Function.cpp  Module.cpp  Type.cpp  Variable.cpp
forge/src/translator/instruction/: Alloca.cpp  BinOp.cpp  Br.cpp  Call.cpp  GetElementPtr.cpp  ICmp.cpp  ResultAnalyzer.cpp  Ret.cpp
template/: args.inja  array.inja  array_index_repeat.inja  assignment.inja  binary_operation.inja  binary_operation_func.inja  branch_switch.inja  call.inja  cond.inja  cond_branch_switch.inja  function.inja  icmp_assignment.inja  memory_lib.inja  return.inja  variable.inja  variable_predefine.inja
test/PPL/: memory_lib.hpprogram
